--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Please tell me this site worked. (If it didn’t I apologize sincerely) BUT I LO
     if (["BUTTON","INPUT"].includes(e.target.tagName)) return;
     const h = document.createElement("div");
     h.className = "heart";
-    h.textContent = Math.random() < 0.5 ? "🪼ྀིྀི" : "🩷ྀིྀི": "꩜ .ᐟ";
+    h.textContent = Math.random() < 0.5 ? "🪼ྀིྀི" : "🩷ྀིྀི";
     h.style.left = e.clientX + "px";
     h.style.top = e.clientY + "px";
     document.getElementById("fx").appendChild(h);
