--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="brand">
       <div class="mark"></div>
       <div>
-        <div class="title" id="titleText">happy birday</div>
+        <div class="title">happy birday</div>
         <div class="subtitle">I made a website for you do you like it?</div>
       </div>
     </div>
@@ -47,8 +47,11 @@
     <section id="home" class="page show">
       <div class="grid">
         <div class="panel panel-pink">
-          <h2 id="homeHeading">It's your 15th!</h2>
+          <h2>It's your 15th!</h2>
           <p>try clicking anywhere (i did something haha)</p>
+
+          <!-- Cute gif placeholder -->
+          <img src="cute.gif" alt="cute gif" class="home-gif" />
         </div>
 
         <div class="panel panel-blue">
@@ -75,11 +78,18 @@
 
           <div class="card-body">
 hello world. Happy birthday to the sweetest and funniest and prettiest girl ever! LIZ you are actuals so young I can’t believe you’re only 15 which means you cant get your learners license this year.. but it’s okay because neither can I!! We can be driver-license-less together when everyone is doing their driving tests.
+
 I’m honestly immensely grateful to have you in the friendgroup, you’re always so bright and happy and in a good mood which brightens up everyone’s day. Also you are literally so stunning like my very 1st impression of you back at the very start of year 9 was like omg she is so freaking pretty and I love your braids hairstyle uehaohue.
+
 Our fairtrade cake last year and the year before were SO GOOD because of your designs and piping and decorating, you are genuinely so talented and I love your art style sososo much it’s so intricate and beautiful.
+
 Werewolf is 100x better with you even though I am the fortune teller but then you also happen to “be the fortune teller” as well.. hmm I wonder what’s going on here.
+
 Also I haven’t tested this coding yet so IDK IF IT’S GONNA BE UP TO EXPECTATIONS hopefully it will though and hopefully the code doesnt crash. You have no idea how many times I had to redo this because it DIDNT WORK EVEN THOUGH I THOUGHT I GOT EVERYTHING RIGHT SORT OF.
-Please tell me this site worked. (If it didn’t I apologize sincerely) BUT I LOVE YOU LIZ YOU’RE SO GORGEOUS AND SWEET AND I HOPE 15 TREATS YOU AMAZING!!! - from 'liz' or lisa?
+
+Please tell me this site worked. (If it didn’t I apologize sincerely)
+
+BUT I LOVE YOU LIZ YOU’RE SO GORGEOUS AND SWEET AND I HOPE 15 TREATS YOU AMAZING!!! - from 'liz' or lisa?
           </div>
         </div>
       </div>
@@ -89,9 +99,7 @@ Please tell me this site worked. (If it didn’t I apologize sincerely) BUT I LO
     <section id="about" class="page">
       <div class="panel panel-pink single">
         <h2>About</h2>
-        <p>
-          hi twin. i made this section for fun and it doesnt have a purpose.
-        </p>
+        <p>hi twin. i made this section for fun and it doesnt have a purpose.</p>
 
         <ul>
           <li>boo</li>
@@ -108,7 +116,7 @@ Please tell me this site worked. (If it didn’t I apologize sincerely) BUT I LO
   </footer>
 </div>
 
-<!-- HEART EFFECT -->
+<!-- EFFECT LAYER -->
 <div id="fx"></div>
 
 <script>
@@ -117,10 +125,13 @@ Please tell me this site worked. (If it didn’t I apologize sincerely) BUT I LO
   const nameInput = document.getElementById("nameInput");
   const enterBtn = document.getElementById("enterBtn");
 
+  let currentPage = "home";
+
   function enterSite() {
     if (!nameInput.value.trim()) return;
     entry.classList.add("hidden");
     site.classList.remove("hidden");
+    currentPage = "home";
   }
 
   enterBtn.onclick = enterSite;
@@ -135,18 +146,41 @@ Please tell me this site worked. (If it didn’t I apologize sincerely) BUT I LO
       pages.forEach(p => p.classList.remove("show"));
       tab.classList.add("active");
       document.getElementById(tab.dataset.page).classList.add("show");
+      currentPage = tab.dataset.page;
     };
   });
 
   document.addEventListener("click", e => {
-    if (["BUTTON","INPUT"].includes(e.target.tagName)) return;
+    if (["BUTTON","INPUT","TEXTAREA"].includes(e.target.tagName)) return;
+
+    const symbols =
+      currentPage === "home"
+        ? ["🪼ྀིྀི", "🩷ྀིྀི", "꩜ .ᐟ"]
+        : ["♡", "♥"];
+
     const h = document.createElement("div");
     h.className = "heart";
-    h.textContent = Math.random() < 0.5 ? "🪼ྀིྀི" : "🩷ྀིྀི";
+    h.textContent = symbols[Math.floor(Math.random() * symbols.length)];
+
     h.style.left = e.clientX + "px";
     h.style.top = e.clientY + "px";
+    h.style.fontSize = (14 + Math.random() * 10) + "px";
+    h.style.color = Math.random() < 0.5
+      ? "rgba(246,211,222,0.95)"
+      : "rgba(214,232,255,0.95)";
+
+    const r1 = (Math.random() * 90 - 45);
+    const r2 = r1 + (Math.random() * 120 - 60);
+
     document.getElementById("fx").appendChild(h);
-    setTimeout(() => h.remove(), 800);
+    h.style.transform = `translate(-50%, -50%) rotate(${r1}deg)`;
+
+    requestAnimationFrame(() => {
+      h.style.opacity = "0";
+      h.style.transform = `translate(-50%, -50%) translateY(-120px) rotate(${r2}deg)`;
+    });
+
+    setTimeout(() => h.remove(), 1600);
   });
 </script>
 
