--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <div class="panel panel-blue">
           <div class="photo-frame">
-            <img src="liz.jpg" alt="Liz" />
+            <img src="IMG_2314.jpeg" alt="Liz" />
           </div>
         </div>
       </div>
