--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <img src="cute.gif" alt="cute gif" class="home-gif" />
         </div>
 
-        <div class="panel panel-blue">
+        <div class="panel panel-pink">
           <div class="photo-frame">
             <img src="IMG_2314.jpeg" alt="Liz" />
           </div>
@@ -64,7 +64,7 @@
 
     <!-- CARD -->
     <section id="card" class="page">
-      <div class="panel panel-blue single">
+      <div class="panel panel-pink single">
         <h2>Card</h2>
 
         <div class="card-preview">
