--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="grid">
         <div class="panel panel-pink">
           <h2>It's your 15th!</h2>
-          <p>try clicking anywhere (i did something haha)</p>
+          <p>try clicking anywhere (i did something haha) also you can click onto the card section in the top right</p>
 
           <!-- Cute gif placeholder -->
           <img src="cute.gif" alt="cute gif" class="home-gif" />
@@ -78,11 +78,9 @@
 
           <div class="card-body">
 hello world. Happy birthday to the sweetest and funniest and prettiest girl ever! LIZ you are actuals so young I can’t believe you’re only 15 which means you cant get your learners license this year.. but it’s okay because neither can I!! We can be driver-license-less together when everyone is doing their driving tests.
-I’m honestly immensely grateful to have you in the friendgroup, you’re always so bright and happy and in a good mood which brightens up everyone’s day. Also you are literally so stunning like my very 1st impression of you back at the very start of year 9 was like omg she is so freaking pretty and I love your braids hairstyle uehaohue.
-Our fairtrade cake last year and the year before were SO GOOD because of your designs and piping and decorating, you are genuinely so talented and I love your art style sososo much it’s so intricate and beautiful.
-Werewolf is 100x better with you even though I am the fortune teller but then you also happen to “be the fortune teller” as well.. hmm I wonder what’s going on here.
-Also I haven’t tested this coding yet so IDK IF IT’S GONNA BE UP TO EXPECTATIONS hopefully it will though and hopefully the code doesnt crash. You have no idea how many times I had to redo this because it DIDNT WORK EVEN THOUGH I THOUGHT I GOT EVERYTHING RIGHT SORT OF.
-Please tell me this site worked. (If it didn’t I apologize sincerely) BUT I LOVE YOU LIZ YOU’RE SO GORGEOUS AND SWEET AND I HOPE 15 TREATS YOU AMAZING!!! - from 'liz' or lisa?
+I’m honestly immensely grateful to have you in the friendgroup, you’re always so bright and happy and in a good mood which brightens up everyone’s day. Also you are literally so stunning like my very 1st impression of you back at the very start of year 9 was like omg she is so freaking pretty and I love your braids hairstyle uehaohue. Our fairtrade cake last year and the year before were SO GOOD because of your designs and piping and decorating, you are genuinely so talented and I love your art style sososo much it’s so intricate and beautiful.
+Werewolf is 100x better with you even though I am the fortune teller but then you also happen to “be the fortune teller” as well.. hmm I wonder what’s going on here. Also I haven’t tested this coding yet so IDK IF IT’S GONNA BE UP TO EXPECTATIONS hopefully it will though and hopefully the code doesnt crash. You have no idea how many times I had to redo this because it DIDNT WORK EVEN THOUGH I THOUGHT I GOT EVERYTHING RIGHT SORT OF.
+Please tell me the branch didn't fail to load. (If it didn’t I apologize sincerely) BUT I LOVE YOU LIZ YOU’RE SO GORGEOUS AND SWEET AND I HOPE 15 TREATS YOU AMAZING!!! - from 'liz' or lisa?
           </div>
         </div>
       </div>
@@ -95,7 +93,7 @@ Please tell me this site worked. (If it didn’t I apologize sincerely) BUT I LO
         <p>hi twin. i made this section for fun and it doesnt have a purpose.</p>
 
         <ul>
-          <li>boo</li>
+          <li>pink</li>
           <li>hello world</li>
           <li>ilysm</li>
         </ul>
