--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <input id="nameInput" type="text" placeholder="Liz" autocomplete="off" />
     <button id="enterBtn" type="button">Enter</button>
 
-    <p class="tiny">Press Enter on your keyboard too</p>
+    <p class="tiny">lisa</p>
   </div>
 </section>
 
