--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <input id="nameInput" type="text" placeholder="Liz" autocomplete="off" />
     <button id="enterBtn" type="button">Enter</button>
 
-    <p class="tiny">lisa</p>
+    <p class="tiny">lisa was here</p>
   </div>
 </section>
 
@@ -48,7 +48,7 @@
       <div class="grid">
         <div class="panel panel-pink">
           <h2>It's your 15th!</h2>
-          <p>try clicking anywhere (i did something haha) also you can click onto the card section in the top right</p>
+          <p>try clicking anywhere (i did something haha) try clicking into the sections on the top right corner to read your card yay</p>
 
           <!-- Cute gif placeholder -->
           <img src="cute.gif" alt="cute gif" class="home-gif" />
