--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <p>try clicking anywhere (i did something haha) try clicking into the sections on the top right corner to read your card yay</p>
 
           <!-- Cute gif placeholder -->
-          <img src="cute.gif" alt="cute gif" class="home-gif" />
+<img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExNnluMG5mb3I0NXl2ZHk3Z2Mwdnp1NzFrcDI5bmI2cW9ldmpkazZwMiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/LfLer7ljLuKA8W1IaY/giphy.gif"
         </div>
 
         <div class="panel panel-pink">
